@@ -1,4 +1,9 @@
 2006-01-06 Mikhail Khodjaiants
+	Bug 120509: CDebuggerTab invokes wong initialization code (in addition to right code).
+	* CDebuggerTab.java
+	* CoreFileDebuggerTab.java
+
+2006-01-06 Mikhail Khodjaiants
 	Cleanup.
 	* CArgumentsTab.java
 	* CMainTab.java
